# drone_metadata_automation

./: .gitignore  PROJECT_ARCHITECTURE.md  README.md  demo.py  demo_video_processing.py  flight_report_8D_20251014_155920.json  pyproject.toml  run_tests.py
demos/: demo_batch_processing.py  demo_directory_organization.py  demo_integrated_catalog.py  demo_phase_2_complete.py
docs/: DEVELOPMENT_PLAN.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PROJECT_ARCHITECTURE.md  WARP.md
drone_metadata/: __init__.py  cli.py  models.py  processor.py
drone_metadata/analysis/: __init__.py  mission_classifier.py
drone_metadata/formatters/: __init__.py  base_formatter.py  dataset_index_generator.py  directory_organizer.py  markdown_formatter.py  semantic_model_exporter.py  thumbnail_generator.py
drone_metadata/ingestion/: __init__.py  airdata_parser.py  directory_scanner.py  srt_parser.py  video_metadata_parser.py
drone_metadata/processing/: __init__.py  batch_processor.py
tests/: README.md  __init__.py  conftest.py
tests/ingestion/: __init__.py  test_airdata_parser.py
